# sandbox_bazel

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  WORKSPACE.bazel  setup_localdev.sh  shell.nix
.github/workflows/: ci.yml
exp_genrule/: BUILD.bazel
exp_python/package/: BUILD.bazel  Dockerfile  nix-base.Dockerfile
exp_python/webapp/: BUILD.bazel  main.py  run.py  test.py
tools/: workspace_status.sh
tools/linting/: BUILD.bazel
tools/pytest/: .pylintrc  defs.bzl
tools/python_check/: BUILD.bazel  defs.bzl  python_check.py
tools/toolchains/: BUILD.bazel
