load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")

py_runtime(
    name = "container_usr_local_py2_runtime",
    interpreter_path = "/usr/local/bin/python",
    python_version = "PY2",
)

py_runtime(
    name = "container_usr_local_py3_runtime",
    interpreter_path = "/usr/local/bin/python",
    python_version = "PY3",
)

py_runtime_pair(
    name = "container_usr_local_py_runtime_pair",
    py2_runtime = ":container_usr_local_py2_runtime",
    py3_runtime = ":container_usr_local_py3_runtime",
)

# A toolchain to run python outputs inside a container.
# If you are using a custom base for py_image which has python tools in a
# different location, you must register that toolchain prior to the
# registration of this one in @io_bazel_rules_docker//python:image.bzl
toolchain(
    name = "container_usr_local_py_toolchain",
    exec_compatible_with = [
        "@io_bazel_rules_docker//platforms:run_in_container",
    ],
    toolchain = ":container_usr_local_py_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)
